--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <nav class="fixed w-full bg-gray-900 shadow-sm z-50 transition-all duration-300 border-b border-gray-800">
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
-                <a href="#" class="text-2xl font-bold text-white">Fico sayang nada</a>
+                <a href="#" class="text-2xl font-bold text-white">F&K</a>
                 
                 <!-- Desktop Menu -->
                 <div class="hidden md:flex space-x-8">
@@ -549,3 +549,4 @@
     </script>
 </body>
 </html>
+
