--- a/index.html
+++ b/index.html
@@ -366,25 +366,18 @@
                     <div class="p-4 bg-gray-800 rounded-lg">
                         <i data-feather="phone" class="w-6 h-6 mx-auto mb-2 text-white"></i>
                         <p class="font-medium text-white">Telepon</p>
-                        <p class="text-gray-300 text-sm">+62 0895-2513-1536</p>
+                        <p class="text-gray-300 text-sm">+62 0815-8435-7065</p>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg">
                         <i data-feather="map-pin" class="w-6 h-6 mx-auto mb-2 text-white"></i>
                         <p class="font-medium text-white">Lokasi</p>
-                        <p class="text-gray-300 text-sm">SMK Pelita Plus Nusantara</p>
+                        <p class="text-gray-300 text-sm">JL. Al falah Cikaret Harapan Jaya Cibinong Bogor 16914</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-black text-white py-8">
-        <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2025 Fico Keandre. All rights reserved.</p>
-            <p class="mt-2 text-gray-400 text-sm">Made with ❤️ by varrelian athaya isna</p>
-        </div>
-    </footer>
 
     <!-- Back to Top Button -->
     <button id="back-to-top" class="fixed bottom-8 right-8 bg-white text-gray-900 p-3 rounded-full shadow-lg opacity-0 invisible transition-all duration-300 z-40">
@@ -549,4 +542,5 @@
     </script>
 </body>
 </html>
+
 
