--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <span id="typewriter" class="border-r-2 border-white"></span>
                 </div>
                 <p class="text-base md:text-xl text-gray-300 max-w-2xl mb-8 px-4">
-                    Saya adalah siswa SMK Pelita Plus Nusantara yang memiliki minat dan bakat di bidang IT
+                    Saya adalah siswa SMK Plus Pelita Nusantara yang memiliki minat dan bakat di bidang IT
                 </p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                     <a href="#projects" class="px-6 py-3 bg-white text-gray-900 rounded-md hover:bg-gray-200 transition-colors duration-300 text-sm md:text-base font-medium">My Projects</a>
@@ -216,13 +216,13 @@
                 
                 <div class="md:w-2/3 text-center md:text-left">
                     <p class="text-gray-300 mb-4 text-sm md:text-base">
-                        Hello! I'm Fico Keandre, siswa SMK Plus Pelita Nusantara
+                        Hello! Saya M Fico Keandre Adha, saya adalah siswa kelas 11 SMK Plus Pelita Nusantara jurusan Rekayasa Perangkat Lunak dengan minat besar di pengembangan web, saya telah mempelajari dasar-dasar seperti HTML, CSS, JavaScript, UI/UX design.
                     </p>
                     <p class="text-gray-300 mb-4 text-sm md:text-base">
-                        Saya memiliki kemampuan di bidang IT yakni Next.js, Kotlin, Java
+                        Saya memiliki kemampuan di bidang IT yakni HTML, CSS, JavaScript, UI/UX design.
                     </p>
                     <p class="text-gray-300 mb-6 text-sm md:text-base">
-                        Saya sering mengikuti kegiatan-kegiatan berbasis IT seperti Sipitlive 
+                        Saya sering mengikuti kegiatan-kegiatan berbasis IT seperti Codelamp.id
                     </p>
                     
                     <!-- Skills Section -->
@@ -366,7 +366,7 @@
                     <div class="p-4 bg-gray-800 rounded-lg">
                         <i data-feather="phone" class="w-6 h-6 mx-auto mb-2 text-white"></i>
                         <p class="font-medium text-white">Telepon</p>
-                        <p class="text-gray-300 text-sm">+62 0815-8435-7065</p>
+                        <p class="text-gray-300 text-sm">0815-8435-7065</p>
                     </div>
                     <div class="p-4 bg-gray-800 rounded-lg">
                         <i data-feather="map-pin" class="w-6 h-6 mx-auto mb-2 text-white"></i>
@@ -542,5 +542,6 @@
     </script>
 </body>
 </html>
+
 
 
