--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         Hello! Saya M Fico Keandre Adha, saya adalah siswa kelas 11 SMK Plus Pelita Nusantara jurusan Rekayasa Perangkat Lunak dengan minat besar di pengembangan web, saya telah mempelajari dasar-dasar seperti HTML, CSS, JavaScript, PHP, PYTHON, UI/UX design.
                     </p>
                     <p class="text-gray-300 mb-4 text-sm md:text-base">
-                        Saya memiliki kemampuan di bidang IT yakni HTML, CSS, JavaScript, PHP, PYTHON, .UI/UX design.
+                        Saya memiliki kemampuan di bidang IT yakni HTML, CSS, JavaScript, PHP, PYTHON, UI/UX design.
                     </p>
                     <p class="text-gray-300 mb-6 text-sm md:text-base">
                         Saya sering mengikuti kegiatan-kegiatan berbasis IT seperti Codelamp.id
@@ -542,6 +542,7 @@
     </script>
 </body>
 </html>
+
 
 
 
